# weavatrix-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  publish-crate.yml
.weavatrix/: architecture.json
benches/: advanced_algorithm_competitors.rs  algorithm_competitors.rs  compare_competitors.rs  component_competitors.rs  graph_builder.rs  graph_serde.rs  topology_competitors.rs
benches/support/: mod.rs
examples/: legacy_check.rs
src/: algo.rs  attribute.rs  error.rs  filter.rs  generator.rs  graph.rs  kind.rs  legacy.rs  lib.rs  matrix.rs  model.rs  topology.rs  undirected.rs  working.rs
src/algo/: astar.rs  bellman.rs  components.rs  dominators.rs  flow.rs  mst.rs  rank.rs  shortest.rs  transitive.rs  traversal.rs
src/algo/components/: condensation.rs  dag.rs  scc.rs  weak.rs
src/algo/flow/: core.rs  cut.rs
src/generator/: deterministic.rs  random.rs
src/graph/: builder.rs  bulk.rs  core.rs  index.rs  validate.rs
src/kind/: edge.rs  evidence.rs  node.rs  string.rs
src/matrix/: dense.rs
src/model/: element.rs  id.rs  provenance.rs  span.rs
src/topology/: core.rs  csr.rs  index.rs  view.rs
src/undirected/: core.rs  view.rs
src/working/: core.rs  freeze.rs  key.rs  mutate.rs  view.rs
tests/: advanced_paths.rs  advanced_paths_competitor.rs  algorithms.rs  algorithms_competitor.rs  analysis_algorithms.rs  analysis_algorithms_competitor.rs  architecture.rs  boundary.rs  components.rs  components_competitor.rs  coverage_contract.rs  generators.rs  graph_builder.rs  matrix.rs  serde_contract.rs  topology.rs  topology_competitor.rs  undirected.rs  working_graph.rs
